--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "gulp-sass": "^3.1.0",
     "gulp-uglify": "^2.1.2",
     "gulp-usemin": "^0.3.28",
-    "gulp-watch": "^4.3.11"
+    "gulp-watch": "^4.3.11",
+    "node-normalize-scss": "^3.0.0"
   },
   "dependencies": {
     "cloudinary-jquery": "^2.3.0",
